<resources>
    <string name="app_name" translatable="false">ShoLis</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="settings_theme">theme</string>
    <string name="settings_theme_dark">dark</string>
    <string name="settings_theme_light">light</string>
    <string name="settings">settings</string>
    <string name="settings_appearance">appearance</string>
    <string name="title_activity_settings" translatable="false">shoLis</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="no_acc_yet">Don\'t have an Account?</string>
    <string name="signuphere">Sign Up here</string>
    <string name="signin">Sign In</string>
    <string name="emailadresse">Email Adresse</string>
    <string name="enterpassword">Enter Password</string>
    <string name="createaccount">Create Account</string>
    <string name="reenterpassword">Re-Enter Password</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_add_shopping_list">AddShoppingListActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>