<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:orientation="vertical"
        android:background="@drawable/main_background">

        <!-- Layout -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/login_register_shape"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createaccount"
            android:textColor="@color/blue_marine"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:drawableTint="@color/white_grey"
            android:ems="10"
            android:hint="@string/emailadresse"
            android:textColorHint="@color/white_grey"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_password_lock"
            android:drawablePadding="12dp"
            android:drawableTint="@color/white_grey"
            android:ems="10"
            android:hint="@string/enterpassword"
            android:textColorHint="@color/white_grey"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_password_lock"
            android:drawablePadding="12dp"
            android:drawableTint="@color/white_grey"
            android:ems="10"
            android:hint="@string/reenterpassword"
            android:textColorHint="@color/white_grey"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</LinearLayout>
